--- a/style.css
+++ b/style.css
@@ -11,6 +11,21 @@ html, body {
     justify-content: center;
     align-items: center;
 }
+
+#input-div {
+    min-width: 200px;
+    max-width: 350px;
+    min-height: 25px;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 5px;
+    color: white;
+    font-size: 2rem;
+}
+
+.text-input u, .text-input strike {
+    color: inherit; /* Use the same color as the font */
+}
 /* --- INLINE TEXT EDITOR --- */
 .text-editor-popup {
     background-color: #6e6e6e;
@@ -249,7 +264,6 @@ html, body {
 }
 
 sub, sup {
-    font-size: 0.7rem;
     color: red;
 }
 /* --- END INLINE TEXT EDITOR --- */
@@ -264,6 +278,7 @@ sub, sup {
     left: -100%;
     top: 0;
     z-index: 1000;
+    box-shadow: 5px 10px 20px 5px rgba(0, 0, 0, 0.4);
 }
 
 .color-picker-header {
@@ -273,9 +288,22 @@ sub, sup {
 }
 
 .color-picker-canvas {
+    position: relative;
     width: 100%;
     height: 100%;
     border-radius: inherit;
+}
+
+.color-picker-canvas.active {
+    cursor: none;
+}
+
+.color-picker-marker {
+    width: 2px;
+    height: 2px;
+    background: black;
+    border: 5px solid white;
+    border-radius: 50%;
 }
 
 .color-picker-body {
@@ -284,6 +312,9 @@ sub, sup {
     padding: 10px 15px;
     display: flex;
     flex-direction: column;
+    background: #727272;
+    border-bottom-left-radius: inherit;
+    border-bottom-right-radius: inherit;
 }
 
 .alpha-hue-slider-wrapper {
@@ -403,5 +434,4 @@ sub, sup {
 .color-inputs-wrapper {
     flex: 1;
 }
-
 /* --- END CUSTOM COLOR PICKER --- */
